# iitm-server-bot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile_all  Dockerfile_arm  Dockerfile_x86  LICENSE  README.md  _types.py  bot.py  config.ini  config.py  dev-requirements.txt  email_template.txt  embeds.py  final.py  main.py  main_bot.py  pyproject.toml  requirements.txt  tools.py  trains.json  triggerPhrases.yml
.github/workflows/: lint.yml  phraseActions.yml
cogs/: House.py  Level.py  Message.py  Reaction.py  Slash.py  Verification.py  dev.py  github.py  interaction.py  live_ping.py  message.py  reaction.py  slash.py  verification.py
contrib/: pre-commit
utils/: formats.py  helper.py  oauth.py  paginator.py
web/: app.py  decorators.py  errors.py  middleware.py  the_route.py  types.py
